@@ -1,3 +1,9 @@
+globus-gssapi-gsi (13.7-1+gt6.@distro@) @distro@; urgency=low
+
+  * Add context inquire OID support to get TLS version and cipher
+
+ -- Globus Toolkit <support@globus.org>  Fri, 15 Jun 2018 10:14:09 -0400
+
 globus-gssapi-gsi (13.6-1+gt6.@distro@) @distro@; urgency=low
 
   * enable ECDH ciphers for openssl < 1.1.0
